fix booking box on splash page to look better on smaller monitors

--- a/frontend/src/stylesheets/booking.scss
+++ b/frontend/src/stylesheets/booking.scss
@@ -11,8 +11,7 @@
     width: 460px;
     box-shadow: 0 16px 40px rgba(0,0,0,0.12);
     position: absolute;
-    left: 0;
-    bottom: 0;
+    margin-top: 20vh;
     margin-left: 14vw;
     margin-bottom: 26vh;
 }
