--- a/frontend/src/stylesheets/output.css
+++ b/frontend/src/stylesheets/output.css
@@ -299,8 +299,7 @@ body {
   width: 460px;
   box-shadow: 0 16px 40px rgba(0, 0, 0, 0.12);
   position: absolute;
-  left: 0;
-  bottom: 0;
+  margin-top: 20vh;
   margin-left: 14vw;
   margin-bottom: 26vh; }
 
